--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,46 @@
-fastapi
-uvicorn
-pandas
-numpy
-yfinance
-requests
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+beautifulsoup4==4.14.3
+certifi==2026.2.25
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+curl_cffi==0.13.0
+fastapi==0.133.1
+frozendict==2.4.7
+greenlet==3.3.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+llvmlite==0.44.0
+multitasking==0.0.12
+numba==0.61.2
+numpy==2.4.2
+pandas==3.0.1
+pandas-ta==0.4.71b0
+peewee==4.0.0
+platformdirs==4.9.2
+protobuf==6.33.5
+pycparser==3.0
+pydantic==2.12.5
+pydantic_core==2.41.5
+python-dateutil==2.9.0.post0
+python-telegram-bot==22.6
+pytz==2025.2
+requests==2.32.5
+setuptools==65.5.0
+six==1.17.0
+soupsieve==2.8.3
+SQLAlchemy==2.0.47
+starlette==0.52.1
+tqdm==4.67.3
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+uvicorn==0.41.0
+websockets==16.0
+yfinance==1.2.0
