--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 pydantic==2.12.5
 yfinance==1.2.0
-pandas==2.2.2
+pandas-ta
 pandas-ta==0.3.14b0
 numpy==1.26.4
