--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ psycopg2-binary==2.9.9
 pydantic==2.12.5
 pydantic-core==2.41.5
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+passlib==1.7.4
 python-dotenv==1.0.1
+python-multipart==0.0.9
 yfinance==1.2.0
 pandas==2.2.2
 numpy==1.26.4
